# market-analysis-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: design.md  reponses-theoriques.md
examples/: report-iphone-16.md  report-nintendo-switch-2.md  request.json  response-iphone-16.json  response-nintendo-switch-2.json
scripts/: demo.sh
src/market_agent/agent/: graph.py  nodes.py  state.py
src/market_agent/api/: app.py  registry.py  routes.py  schemas.py  service.py
src/market_agent/core/: config.py  errors.py  logging.py
src/market_agent/llm/: base.py  factory.py  langchain_impl.py  mock.py
src/market_agent/tools/: models.py  report.py  sentiment.py  trends.py
src/market_agent/tools/scraper/: adapters.py  base.py  mock_data.py
tests/: conftest.py  test_api.py  test_config.py  test_graph.py  test_llm.py  test_models.py  test_nodes.py  test_registry.py  test_report.py  test_scraper.py  test_sentiment.py  test_trends.py
