[project]
name = "market-agent"
version = "0.1.0"
description = "E-commerce market analysis agent (LangGraph orchestration)"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=1.2.9,<1.3",
    "langchain-core>=1.4.9,<2",
    "langchain-openai>=1.3.5,<2",
    "langchain-anthropic>=1.4.8,<2",
    "fastapi>=0.139,<1",
    "uvicorn[standard]>=0.51,<1",
    "pydantic>=2.7.4,<3",
    "pydantic-settings>=2.14,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.1,<10",
    "pytest-asyncio>=1.4,<2",
    "httpx>=0.28,<1",
    "ruff>=0.15,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # fastapi.testclient re-exports starlette's TestClient, which emits a
    # StarletteDeprecationWarning about httpx<2. Library-level, not our code;
    # httpx2 is not in our dependency set. The message-match is a start-anchored
    # regex; the real text has literal backticks (`httpx`, `starlette.testclient`),
    # so those must be present for the ignore to actually take effect.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
